--- a/README.Rmd
+++ b/README.Rmd
@@ -151,3 +151,31 @@ Get help using command `?TOmicsVis::violin_plot` or reference page [https://benb
 # Get help with command in R console.
 # ?TOmicsVis::violin_plot
 ```
+
+### 3.5 quantile_plot
+Quantile plot for visualizing data distribution.
+```{r quantile_plot, warning=FALSE}
+# 1. Load box_data example datasets
+data(quantile_data)
+
+# 2. Run quantile_plot plot function
+quantile_plot(
+  quantile_data,
+  my_shape = "fill_circle",
+  point_size = 1.5,
+  conf_int = TRUE,
+  conf_level = 0.95,
+  split_panel = "One_Panel",
+  legend_pos = "right",
+  legend_dir = "vertical",
+  sci_fill_color = "Sci_AAAS",
+  sci_color_alpha = 0.75,
+  ggTheme = "theme_light"
+)
+```
+
+Get help using command `?TOmicsVis::quantile_plot` or reference page [https://benben-miao.github.io/TOmicsVis/reference/quantile_plot.html](https://benben-miao.github.io/TOmicsVis/reference/quantile_plot.html).
+```{r}
+# Get help with command in R console.
+# ?TOmicsVis::quantile_plot
+```
