New function venn_plot

--- a/README.Rmd
+++ b/README.Rmd
@@ -179,3 +179,25 @@ Get help using command `?TOmicsVis::quantile_plot` or reference page [https://be
 # Get help with command in R console.
 # ?TOmicsVis::quantile_plot
 ```
+
+### 3.6 venn_plot
+Venn plot for stat common and unique gene among multiple sets.
+```{r venn_plot, warning=FALSE}
+# 1. Load venn_data example datasets
+data(venn_data)
+
+# 2. Run venn_plot plot function
+venn_plot(
+  venn_data,
+  line_type = "blank",
+  ellipse_shape = "circle",
+  sci_fill_color = "Sci_AAAS",
+  sci_fill_alpha = 0.65
+)
+```
+
+Get help using command `?TOmicsVis::venn_plot` or reference page [https://benben-miao.github.io/TOmicsVis/reference/venn_plot.html](https://benben-miao.github.io/TOmicsVis/reference/venn_plot.html).
+```{r}
+# Get help with command in R console.
+# ?TOmicsVis::venn_plot
+```
