--- a/README.Rmd
+++ b/README.Rmd
@@ -182,6 +182,65 @@ Get help using command `?TOmicsVis::violin_plot` or reference page [https://benb
 # ?TOmicsVis::violin_plot
 ```
 
+#### 3.2.3 survival_plot
+Survival plot for analyzing and visualizing survival data.
+```{r survival_plot, warning=FALSE}
+# 1. Load survival_plot example datasets
+data(survival_data)
+
+# 2. Run survival_plot plot function
+survival_plot(
+  survival_data,
+  curve_function = "pct",
+  conf_inter = TRUE,
+  interval_style = "ribbon",
+  risk_table = TRUE,
+  num_censor = TRUE,
+  sci_palette = "aaas",
+  ggTheme = "theme_light",
+  x_start = 0,
+  y_start = 0,
+  y_end = 100,
+  x_break = 100,
+  y_break = 25
+)
+```
+
+Get help using command `?TOmicsVis::survival_plot` or reference page [https://benben-miao.github.io/TOmicsVis/reference/survival_plot.html](https://benben-miao.github.io/TOmicsVis/reference/survival_plot.html).
+```{r}
+# Get help with command in R console.
+# ?TOmicsVis::survival_plot
+```
+
+#### 3.2.4 tsne_plot
+TSNE plot for analyzing and visualizing TSNE algorithm.
+```{r tsne_plot, warning=FALSE}
+# 1. Load tsne_plot example datasets
+data(tsne_data)
+
+# 2. Run tsne_plot plot function
+tsne_plot(
+  tsne_data,
+  point_size = 3,
+  point_alpha = 0.8,
+  text_size = 2,
+  text_alpha = 0.8,
+  ci_level = 0.95,
+  ellipse_alpha = 0.3,
+  sci_fill_color = "Sci_AAAS",
+  sci_color_alpha = 0.9,
+  legend_pos = "right",
+  legend_dir = "vertical",
+  ggTheme = "theme_light"
+)
+```
+
+Get help using command `?TOmicsVis::tsne_plot` or reference page [https://benben-miao.github.io/TOmicsVis/reference/tsne_plot.html](https://benben-miao.github.io/TOmicsVis/reference/tsne_plot.html).
+```{r}
+# Get help with command in R console.
+# ?TOmicsVis::tsne_plot
+```
+
 ### 3.3 Differential Expression Analyais
 #### 3.3.1 venn_plot
 Venn plot for stat common and unique gene among multiple sets.
